feat: 1000px respons. part 1

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -21,7 +21,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__content FONT-normal FONT-medium-font-weight">
+      <div
+        class="header__content subsection FONT-normal FONT-medium-font-weight"
+      >
         <div class="header__content--left">
           <a href="https://kmnkat.github.io/online-zoo/pages/main/">
             <div class="header__logo">
@@ -71,7 +73,9 @@
     </header>
     <main>
       <section class="watch-your-fav-anim">
-        <div class="watch-your-fav-anim__content center-translate">
+        <div
+          class="watch-your-fav-anim__content subsection center-block-content"
+        >
           <div class="watch-your-fav-anim__heading-wrapper">
             <h2 class="watch-your-fav-anim__heading margin-after-big">
               Watch your
@@ -87,14 +91,8 @@
         </div>
       </section>
       <section class="the-backstage padding-section-big">
-        <div class="the-backstage__content center-block-content">
-          <div class="the-backstage__left">
-            <img
-              src="../../assets/images/bamboo-cap.png"
-              alt="Bamboo cap"
-              class="the-backstage__image"
-            />
-          </div>
+        <div class="the-backstage__content subsection center-block-content">
+          <div class="the-backstage__left"></div>
           <div class="the-backstage__right">
             <h3
               class="FONT-subheader-superbig the-backstage__heading margin-after-middle"
@@ -119,7 +117,9 @@
         </div>
       </section>
       <div class="animals-cards__background">
-        <section class="animals_cards center-block-content padding-section-big">
+        <section
+          class="animals_cards subsection center-block-content padding-section-big"
+        >
           <div class="animal_cards-container margin-after-bigger">
             <div class="animal-card">
               <div class="animal-card__image-wrapper">
@@ -275,7 +275,7 @@
             </div>
           </div>
           <button
-            class="animal-cards__button big-button center-block-content margin-after-bigger"
+            class="animal-cards__button big-button center-block-content margin-after-big"
           >
             choose your favorite
           </button>
@@ -283,7 +283,7 @@
       </div>
       <section class="margin-after-big pick-and-feed padding-section-big">
         <div
-          class="pick-and-feed__frame white-transparent-background-section center-block-content"
+          class="pick-and-feed__frame subsection white-transparent-background-section center-block-content"
         >
           <h2
             class="FONT-subheader-big FONT-subheader-superbig margin-after-big"
@@ -323,7 +323,7 @@
                 <p class="pick-and-feed__container-text">Pay with card</p>
               </div>
             </div>
-
+            <div class="pick-and-feed__card-arrow"></div>
             <div class="pick-and-feed__card">
               <div class="pick-and-feed__container">
                 <div class="pick-and-feed__container-image margin-after-middle">
@@ -338,7 +338,7 @@
                 </p>
               </div>
             </div>
-
+            <div class="pick-and-feed__card-arrow"></div>
             <div class="pick-and-feed__card">
               <div class="pick-and-feed__container">
                 <div class="pick-and-feed__container-image margin-after-middle">
@@ -353,18 +353,6 @@
                 </p>
               </div>
             </div>
-            <div class="pick-and-feed__card-arrows">
-              <img
-                src="../../assets//icons/arrow.svg"
-                alt="arrow"
-                class="pick-and-feed__card-arros"
-              />
-              <img
-                src="../../assets//icons/arrow.svg"
-                alt="arrow"
-                class="pick-and-feed__card-arros"
-              />
-            </div>
           </div>
 
           <button class="pick-and-feed__button big-button center-block-content">
@@ -373,7 +361,9 @@
         </div>
       </section>
       <div class="testimonials-background">
-        <section class="testimonials center-block-content padding-section-big">
+        <section
+          class="testimonials subsection padding-section-big center-block-content"
+        >
           <h3 class="testiomonials__heading FONT-big margin-after-big">
             Testimonials
           </h3>
@@ -519,7 +509,7 @@
         </section>
       </div>
       <footer class="footer">
-        <div class="footer-content">
+        <div class="footer-content subsection">
           <div class="footer-content__upper">
             <a
               class="nav-link"
@@ -598,7 +588,7 @@
               </div>
             </div>
             <div class="bottom__nav">
-              <nav class="header__navigation FONT-normal">
+              <nav class="footer__navigation FONT-normal">
                 <li class="header__navigation-link">
                   <a
                     class="nav-link active-page"
@@ -612,20 +602,14 @@
                 <li class="header__navigation-link">
                   <a class="nav-link" href="#">Zoos</a>
                 </li>
-                <li class="header__navigation-link">
-                  <a
-                    class="nav-link"
-                    href="https://kmnkat.github.io/online-zoo/pages/donate/"
-                    >Donate</a
-                  >
-                </li>
+
                 <li class="header__navigation-link">
                   <a class="nav-link" href="#">Contact us</a>
                 </li>
               </nav>
             </div>
             <div class="botton__design">
-              <div class="FONT-normal FONT-light">
+              <div class="FONT-normal FONT-light margin-after-middle">
                 <a
                   href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1"
                   class="header__attribution nav-link"
