--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__content FONT-medium-font-weight">
+      <div class="header__content subsection FONT-medium-font-weight">
         <div class="header__content--left">
           <a href="https://kmnkat.github.io/online-zoo/pages/main/">
             <div class="header__logo">
@@ -74,7 +74,9 @@
     <main>
       <section class="donate__panda-header"></section>
       <section class="donate">
-        <div class="donate__content center-block-content margin-after-bigger">
+        <div
+          class="donate__content subsection center-block-content margin-after-bigger"
+        >
           <div class="donate__purpose">
             <h1 class="donate__header-big FONT-header-big margin-after-middle">
               THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!
@@ -249,7 +251,7 @@
         </div>
       </section>
       <footer class="footer">
-        <div class="footer-content">
+        <div class="footer-content subsection">
           <div class="footer-content__upper">
             <a
               class="nav-link"
@@ -328,7 +330,7 @@
               </div>
             </div>
             <div class="bottom__nav">
-              <nav class="header__navigation">
+              <nav class="footer__navigation">
                 <li class="header__navigation-link">
                   <a
                     class="nav-link"
@@ -342,20 +344,14 @@
                 <li class="header__navigation-link">
                   <a class="nav-link" href="#">Zoos</a>
                 </li>
-                <li class="header__navigation-link">
-                  <a
-                    class="nav-link active-page"
-                    href="https://kmnkat.github.io/online-zoo/pages/donate/"
-                    >Donate</a
-                  >
-                </li>
+
                 <li class="header__navigation-link">
                   <a class="nav-link" href="#">Contact us</a>
                 </li>
               </nav>
             </div>
             <div class="botton__design">
-              <div class="FONT-light">
+              <div class="FONT-light margin-after-middle">
                 <a
                   href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1"
                   class="header__attribution nav-link"
