feat: resp. 640px

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -143,50 +143,53 @@
                 </div>
               </div>
               <div class="donate__form-dots margin-after-middle">
-                <div class="dot-clickable">
+                <div class="dot-clickable" id="dot-5000">
                   <span class="donate__form-dot-clickable-area">
                     <span class="donate__form-dot"></span
                   ></span>
                   <p class="donate__form-label">$5000</p>
                 </div>
 
-                <div class="dot-clickable">
+                <div class="dot-clickable" id="dot-2000">
                   <span class="donate__form-dot-clickable-area">
                     <span class="donate__form-dot"></span
                   ></span>
                   <p class="donate__form-label">$2000</p>
                 </div>
-                <div class="dot-clickable donate__form-dot--chosen">
+                <div
+                  class="dot-clickable donate__form-dot--chosen"
+                  id="dot-1000"
+                >
                   <span class="donate__form-dot-clickable-area">
                     <span class="donate__form-dot"></span
                   ></span>
                   <p class="donate__form-label">$1000</p>
                 </div>
-                <div class="dot-clickable">
+                <div class="dot-clickable" id="dot-500">
                   <span class="donate__form-dot-clickable-area">
                     <span class="donate__form-dot"></span
                   ></span>
                   <p class="donate__form-label">$500</p>
                 </div>
-                <div class="dot-clickable">
+                <div class="dot-clickable" id="dot-250">
                   <span class="donate__form-dot-clickable-area">
                     <span class="donate__form-dot"></span
                   ></span>
                   <p class="donate__form-label">$250</p>
                 </div>
-                <div class="dot-clickable">
+                <div class="dot-clickable" id="dot-100">
                   <span class="donate__form-dot-clickable-area">
                     <span class="donate__form-dot"></span
                   ></span>
                   <p class="donate__form-label">$100</p>
                 </div>
-                <div class="dot-clickable">
+                <div class="dot-clickable" id="dot-50">
                   <span class="donate__form-dot-clickable-area">
                     <span class="donate__form-dot"></span
                   ></span>
                   <p class="donate__form-label">$50</p>
                 </div>
-                <div class="dot-clickable">
+                <div class="dot-clickable" id="dot-25">
                   <span class="donate__form-dot-clickable-area">
                     <span class="donate__form-dot"></span
                   ></span>
