fix: watch you fav anim resp.

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -78,7 +78,8 @@
         >
           <div class="watch-your-fav-anim__heading-wrapper">
             <h2 class="watch-your-fav-anim__heading margin-after-big">
-              Watch your
+              Watch<br />
+              your
               <span class="watch-your-fav-anim__heading--decoration"
                 >favourite</span
               >
