--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -516,12 +516,12 @@
               class="nav-link"
               href="https://kmnkat.github.io/online-zoo/pages/main/"
             >
-              <div class="header__logo">
-                <p class="header__title">PetStory Online</p>
+              <div class="footer__logo">
+                <p class="footer__title">PetStory Online</p>
                 <img
                   src="../../assets/icons/bamboo.png"
                   alt=""
-                  class="header__logo-img"
+                  class="footer__logo-img"
                 />
               </div>
             </a>
