--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -35,7 +35,7 @@
               />
             </div>
           </a>
-          <nav class="header__navigation">
+          <nav class="header__navigation" id="navigation-header-burger">
             <li class="header__navigation-link">
               <a
                 class="nav-link"
@@ -59,6 +59,9 @@
             <li class="header__navigation-link">
               <a class="nav-link" href="#">Contact us</a>
             </li>
+            <div class="header__burger-x">
+              <button class="burger__x btn-x">⨉</button>
+            </div>
           </nav>
         </div>
         <div class="header__content--right">
@@ -72,6 +75,7 @@
       </div>
     </header>
     <main>
+      <div class="overlay" id="overlay"></div>
       <section class="donate__panda-header"></section>
       <section class="donate">
         <div
