feat. testimonials interactivity

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -372,6 +372,7 @@
           <h3 class="testiomonials__heading FONT-big margin-after-big">
             Testimonials
           </h3>
+          <div class="popup-testimonial"></div>
           <div class="testimonials-wrapper margin-after-middle">
             <div class="testimonial FONT-light">
               <div class="testimonial__header">
