--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -634,6 +634,6 @@
         </div>
       </footer>
     </main>
-    <script src="./script.js"></script>
+    <script type="module" s src="./script.js"></script>
   </body>
 </html>
